--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
-    "build": "vsce package"
+    "build": "vsce package",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
@@ -55,6 +56,8 @@
     "@vscode/test-electron": "^2.2.3",
     "eslint": "^8.34.0",
     "glob": "^8.1.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.1.2",
     "mocha": "^10.2.0",
     "typescript": "^4.9.5"
   },
