test: fix pipelines

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,4 +30,5 @@ jobs:
           node-version: '16'
           cache: 'npm'
       - run: npm ci
+      - run: npm i -g @vscode/vsce
       - run: npm run build
