fix: add activationEvents

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
   "main": "./out/extension.js",
+  "activationEvents": [
+    "*"
+  ],
   "contributes": {
     "commands": [
       {
